[workspace]
members = [ 
    "crates/*",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hector Crean <hectorcrean@gmail.com>"]
description = "Time management tool"
license = "MIT"

[workspace.dependencies]
timex_core = { path = "crates/timex_core" }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
gix = "0.70.0"
thiserror = "2.0.11"
color-eyre = "0.6.3"
colored = "2.0.0"