[package]
name = "timex_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
syntect = "5.0"
lazy_static = "1.4"
toml = "0.8" 
tempfile = "3.8"
async-openai = "0.27.2"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"